--- a/Beerkoenig/Beerkoenig.Spa/src/app/app.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1>Bierkönig</h1>
+<img id="beerkoenig" src="/assets/beerkoenig.png" alt="">
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
 <router-outlet></router-outlet>
