--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/completed/completed.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/completed/completed.component.html
@@ -3,7 +3,7 @@
 
 <p>Diese Bierverkostung ist bereits abgeschlossen!</p>
 
-<p>Ergebnis:</p>
+<p id="ergebnis">Ergebnis:</p>
 
 <div *ngFor="let b of contest.results">
   <span>{{b.number}}</span> <span>{{b.beerId}}</span> <span>{{b.vote}}</span>
