--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/welcome/welcome.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/welcome/welcome.component.html
@@ -1,4 +1,8 @@
-<h3>Willkommen beim Bierkönig!</h3>
+
+<img id="krone" src="/assets/krone.png" alt="">
+<img id="logo" src="/assets/Logo.png" alt="">
+
+<h3>Willkommen!</h3>
 
 <p>Zum Anlegen einer neuen Bierverkostung bitte den Button drücken:</p>
 
