--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/resolve/resolve.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/resolve/resolve.component.html
@@ -3,9 +3,9 @@
 
   <p>Bitte die ausgeschenkten Biere in der richtigen Reihenfolge erfassen:</p>
   
-  <ng-container *ngIf="result">
-    <app-beer-resolve *ngFor="let b of result" [beers]="contest.beers" [result]="b"></app-beer-resolve>
+  <ng-container id="select" *ngIf="result">
+    <app-beer-resolve  *ngFor="let b of result" [beers]="contest.beers" [result]="b"></app-beer-resolve>
   </ng-container>
 
   <button [disabled]="!isValid()" (click)="onResolve()">Auflösen</button>
-</ng-container>
+</ng-container> 
