--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/start/start.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/start/start.component.html
@@ -1,4 +1,4 @@
-<h3>
+<h3 *ngIf="!isStarted">
   Bierverkostung starten
 </h3>
 
@@ -8,9 +8,9 @@
 
 
 <div *ngIf="isStarted">
-  <p>Die Bierverkostung ist gestarted!</p>
+  <h3>Die Bierverkostung ist gestarted!</h3>
 
-  <p>Wichtig!</p>
+  <p id="wichtig"> <strong>Wichtig!</strong> </p>
 
 
   <div>
