--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/welcome-participent/welcome-participent.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/welcome-participent/welcome-participent.component.html
@@ -7,7 +7,7 @@
   <form #startForm="ngForm">
     <p>Um zu beginnen gib bitte deinen Namen an:</p>
     <input type="text" [(ngModel)]="userName" required name="userName" [disabled]="isBusyCreating">
-    <p *ngIf="isErrorCreatingParticipent">Dieser Benutzername ist bereits vergeben. Bitte wähle einen anderen Namen.</p>
+    <p *ngIf="isErrorCreatingParticipent"> <strong>Dieser Benutzername ist bereits vergeben. Bitte wähle einen anderen Namen.</strong> </p>
 
     <button *ngIf="!isBusyCreating" [disabled]="startForm.invalid" (click)="onCreateParticipent()">Starten</button>
   </form>
