--- a/Beerkoenig/Beerkoenig.Spa/src/inputs.scss
+++ b/Beerkoenig/Beerkoenig.Spa/src/inputs.scss
@@ -20,3 +20,12 @@ input[type=number] {
     margin-bottom: .5rem;
     transition: 250ms ease;
 }
+
+select {
+    border: 1px solid #ffd5a5;
+    border-radius: 5px;
+    padding: 0;
+    width: 100%;
+    height: 1.8rem;
+}
+
