Complete visualization of results.

--- a/Beerkoenig/Beerkoenig.Spa/src/app/components/participent-results/participent-results.component.scss
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/components/participent-results/participent-results.component.scss
@@ -1,6 +1,3 @@
-p {
-    text-decoration: underline;
-}
 
 table {
     background: #f0ece2;
@@ -10,4 +7,12 @@ table {
 
 th.mat-header-cell {
     text-align: center;
+}
+
+.correct {
+    color: green;
+}
+
+.incorrect {
+    color: red;
 }
