--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/voting/beer-vote/beer-vote.component.scss
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/voting/beer-vote/beer-vote.component.scss
@@ -6,10 +6,10 @@
     font-weight: bold;
 }
 
-input.vote {
-   max-width: 3rem;
-   margin: 0;
-}
+// input.vote {
+//    max-width: 4rem;
+//    margin: 0;
+// }
 
 .voteBeer {
     display: flex;
