--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/voting/voting.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/voting/voting.component.html
@@ -1,3 +1,4 @@
+<app-progress-spinner *ngIf="isBusy || isBusySaving"></app-progress-spinner>
 <ng-container *ngIf="contest">
   <h3>
     {{contest.title}}
