--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/resolve/resolve.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/resolve/resolve.component.html
@@ -1,3 +1,4 @@
+<app-progress-spinner *ngIf="isBusy || isBusyCompleting"></app-progress-spinner>
 <ng-container *ngIf="contest">
   <h3>{{contest.title}} Auflösung</h3>
 
