--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/result/result.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/result/result.component.html
@@ -1,23 +1,17 @@
+<app-progress-spinner *ngIf="isBusy"></app-progress-spinner>
 <h3>
   Die Bierverkostung ist abgeschlossen!
 </h3>
 
 
 <ng-container *ngIf="contest && contest.results">
-  <p>Hier die am Besten bewerteten Biere:</p>
-  <div *ngFor="let b of contest.results">
-    <span>{{b.number}}</span> <span>{{b.beerId}}</span> <span>{{b.vote}}</span>
-  </div>
+  <p>Das sind deine Ergebnisse:</p>
+  <app-participent-results [results]="participentResult" [contestResults]="contest.results"></app-participent-results>
 
-  <p>Das sind deine Ergebnisse</p>
-  <div *ngFor="let r of participentResult">
-    <span>{{r.beerNumber}}</span> <span>{{r.beerId}}</span> <span>{{r.isCorrect}}</span>
-  </div>
+  <p>Siegerliste:</p>
+  <app-contest-results [results]="contestResult"></app-contest-results>
 
-  <p>Hier die Gesamtergebnisse</p>
-  <div *ngFor="let r of contestResult">
-    <span>{{r.userName}}</span> <span>{{r.correctBeers}}</span>
-  </div>
-
-  <!-- TODO: Visualize correct and wrong results -->
+  <p>Hier das Ergebnis inkl. Geschmackswertung :</p>
+  <app-taste-results [results]="contest.results"></app-taste-results>
+  
 </ng-container>
