Included push notifications and layout fixes.

--- a/Beerkoenig/Beerkoenig.Spa/src/app/components/progress-spinner/progress-spinner.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/components/progress-spinner/progress-spinner.component.html
@@ -1,4 +1,4 @@
-<div fxLayout fxLayoutAlign="center center" [ngStyle]="{background: getBackground()}">
+<div class="container" fxLayout fxLayoutAlign="center center" [ngStyle]="{background: getBackground()}">
   <div fxLayout="column" fxLayoutAlign="center">
     <div class="spinner-container">
       <img src="../../../assets/busy.gif" class="centered-container" >
