--- a/Beerkoenig/Beerkoenig.Spa/src/app/components/progress-spinner/progress-spinner.component.scss
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/components/progress-spinner/progress-spinner.component.scss
@@ -1,7 +1,7 @@
 @import '~@angular/material/theming';
 @import '../../../styles.scss';
 
-:host {
+.container {
   position: absolute;
   height: 100%;
   width: 100%;
