--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/voting/beer-vote/beer-vote.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/voting/beer-vote/beer-vote.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div>
-    <p class="voteTaste">Geschmack: ({{result.vote}})</p>
+    <p class="voteTaste">Geschmack: <span *ngIf="result.vote"> ({{result.vote}})</span></p>
     <mat-slider min="0" max="10" [(ngModel)]="result.vote"></mat-slider>
     <!-- <input class="vote" type="number" min="1" max="10" [(ngModel)]="result.vote"> -->
   </div>
