--- a/Beerkoenig/Beerkoenig.Spa/src/styles.scss
+++ b/Beerkoenig/Beerkoenig.Spa/src/styles.scss
@@ -16,6 +16,7 @@ html {
     color: #414141;
     font-size: 1.5rem;
     text-align: center;
+    height: 100%;
 }
 
 body {
@@ -33,9 +34,6 @@ body {
   }
 
 
-
-html, body { height: 100%; }
-body { margin: 0; font-family: 'Roboto', sans-serif; }
 
 // centered container
 .centered-container {
