Added SignalR support for pushing information to iphones as well.

--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/beers/beer-item/beer-item.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/beers/beer-item/beer-item.component.html
@@ -7,11 +7,11 @@
     </p>
     <input type="text" [(ngModel)]="beer.id" *ngIf="isEditable">
   </div>
-  <div>
+  <!-- <div>
     <label>Beschreibung</label>
     <p *ngIf="!isEditable">
       {{beer.description}}
     </p>
     <input type="text" [(ngModel)]="beer.description" *ngIf="isEditable">
-  </div>
+  </div> -->
 </div>
