--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/welcome/welcome.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/welcome/welcome.component.html
@@ -1,6 +1,4 @@
-
-<img id="krone" src="/assets/krone.png" alt="">
-<img id="logo" src="/assets/Logo.png" alt="">
+<app-welcome-animation></app-welcome-animation>
 
 <h3>Willkommen!</h3>
 
