Support for beer images and description.

--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/beers/beer-item/beer-item.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/beers/beer-item/beer-item.component.html
@@ -7,11 +7,27 @@
     </p>
     <input type="text" [(ngModel)]="beer.id" *ngIf="isEditable">
   </div>
-  <!-- <div>
+
+  <div>
     <label>Beschreibung</label>
     <p *ngIf="!isEditable">
       {{beer.description}}
     </p>
     <input type="text" [(ngModel)]="beer.description" *ngIf="isEditable">
-  </div> -->
+  </div>
+
+  <button *ngIf="!beer.imageUrl && !isBusyUpoading" (click)="fileUpload.click()">
+    Foto hochladen
+  </button>
+  <button *ngIf="beer.imageUrl && !isBusyUpoading" (click)="beer.imageUrl = null;">Foto entfernen</button>
+
+
+  <input type="file" #fileUpload name="upname" ng2FileSelect [uploader]="uploader" (change)="handleUpload($event).bind(this)"
+    style="display:none;" />
+
+
+  <img *ngIf="beer.imageUrl" [src]="beer.imageUrl">
+
+  <mat-progress-spinner *ngIf="isBusyUpoading" mode="indeterminate" diameter="32"></mat-progress-spinner>
+
 </div>
