--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/beers/beer-item/beer-item.component.scss
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/beers/beer-item/beer-item.component.scss
@@ -1,4 +1,5 @@
 @import "~src/inputs";
+@import "~src/buttons";
 
 input {
     display: block;
@@ -13,4 +14,9 @@ div {
 
 label {
     color: #545455;
+}
+
+img {
+    width: 100px;
+    height: 100px;
 }
