--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/voting/voting.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/voting/voting.component.html
@@ -1,4 +1,4 @@
-<app-progress-spinner *ngIf="isBusy || isBusySaving"></app-progress-spinner>
+<app-progress-spinner *ngIf="isBusy"></app-progress-spinner>
 <ng-container *ngIf="contest">
   <h3>
     {{contest.title}}
@@ -6,10 +6,9 @@
 
   <ng-container *ngIf="state && state.currentResult">
     <div *ngFor="let b of state.currentResult">
-      <app-beer-vote [beers]="contest.beers" [result]="b" (resultChanged)="onResultChanged($event)"></app-beer-vote>
+      <mat-divider></mat-divider>
+      <app-beer-vote [beers]="contest.beers" [result]="b" (resultChanged)="onSave()"></app-beer-vote>
     </div>
   </ng-container>
-
-  <button [disabled]="isBusySaving" (click)="onSave()">Speichern</button>
 
 </ng-container>
