Fixed layout for progress spinner uploading beers.

--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/beers/beer-item/beer-item.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/beers/beer-item/beer-item.component.html
@@ -28,6 +28,6 @@
 
   <img *ngIf="beer.imageUrl" [src]="beer.imageUrl">
 
-  <mat-progress-spinner *ngIf="isBusyUploading" mode="indeterminate" diameter="32"></mat-progress-spinner>
+  <mat-progress-spinner *ngIf="isBusyUploading" mode="indeterminate" color="accent" diameter="32"></mat-progress-spinner>
 
 </div>
