Sorted taste ranking descending by taste, fixed duplicate taste calculation issue.

--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/result/result.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/result/result.component.html
@@ -11,7 +11,7 @@
   <p>Siegerliste:</p>
   <app-contest-results [results]="contestResult"></app-contest-results>
 
-  <p>Hier das Ergebnis inkl. Geschmackswertung :</p>
+  <p>Geschmackswertung:</p>
   <app-taste-results [results]="contest.results"></app-taste-results>
   
 </ng-container>
