--- a/Beerkoenig/Beerkoenig.Spa/src/app/components/contest-results/contest-results.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/components/contest-results/contest-results.component.html
@@ -1,17 +1,19 @@
 <table mat-table [dataSource]="results" class="mat-elevation-z1">
 
-    <!-- Number Column -->
-    <ng-container matColumnDef="userName">
-      <th mat-header-cell *matHeaderCellDef> Teilnehmer </th>
-      <td mat-cell *matCellDef="let element"> {{element.userName}} </td>
-    </ng-container>
-  
-    <!-- Beer Column -->
-    <ng-container matColumnDef="correctBeers">
-      <th mat-header-cell *matHeaderCellDef> Richtige Biere </th>
-      <td mat-cell *matCellDef="let element"> {{element.correctBeers}} </td>
-    </ng-container>
-    
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+  <!-- Correct Beers Column -->
+  <ng-container matColumnDef="correctBeers">
+    <th mat-header-cell *matHeaderCellDef> Richtige Biere </th>
+    <td mat-cell *matCellDef="let result"> {{result.correctBeers}} </td>
+  </ng-container>
+
+  <!-- Participent Column -->
+  <ng-container matColumnDef="userName">
+    <th mat-header-cell *matHeaderCellDef> Teilnehmer </th>
+    <td mat-cell *matCellDef="let result"> {{result.userName}} </td>
+  </ng-container>
+
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
