--- a/Beerkoenig/Beerkoenig.Spa/src/app/components/taste-results/taste-results.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/components/taste-results/taste-results.component.html
@@ -1,22 +1,18 @@
-<table mat-table [dataSource]="results" class="mat-elevation-z1">
+<table mat-table matSort [dataSource]="results" class="mat-elevation-z1">
 
-  <!-- Number Column -->
-  <ng-container matColumnDef="number">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.number}} </td>
+
+  <!-- Vote Column -->
+  <ng-container matColumnDef="vote">
+    <th mat-header-cell *matHeaderCellDef> Geschmack </th>
+    <td mat-cell *matCellDef="let beer"> {{beer.vote}} </td>
   </ng-container>
 
   <!-- Beer Column -->
   <ng-container matColumnDef="beerId">
     <th mat-header-cell *matHeaderCellDef> Bier </th>
-    <td mat-cell *matCellDef="let element"> {{element.beerId}} </td>
+    <td mat-cell *matCellDef="let beer"> {{beer.beerId}}</td>
   </ng-container>
 
-  <!-- Vote Column -->
-  <ng-container matColumnDef="vote">
-    <th mat-header-cell *matHeaderCellDef> Geschmack </th>
-    <td mat-cell *matCellDef="let element"> {{element.vote}} </td>
-  </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
