Improved beer creation

--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/beers/beer-item/beer-item.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/beers/beer-item/beer-item.component.html
@@ -1,33 +1,35 @@
-<div>
+<div fxLayout.gt-md="row" fxLayout="column">
 
-  <div>
-    <label>Biername</label>
-    <p *ngIf="!isEditable">
-      {{beer.id}}
-    </p>
-    <input type="text" [(ngModel)]="beer.id" *ngIf="isEditable">
+  <mat-icon id="closeBtn" (click)="delete.emit()" matTooltip="Bier entfernen">close</mat-icon>
+
+  <!-- Beer Image-->
+  <div fxFlex.gt-md="30">
+    <input type="file" #fileUpload name="upname" ng2FileSelect [uploader]="uploader" (change)="handleUpload($event)"
+      style="display:none;" />
+
+    <img [src]="getBeerImage()" (click)="onToggleBeerImage()" [matTooltip]="getToolTipText()" matTooltipPosition="above">
+
+    <mat-progress-spinner *ngIf="isBusyUploading" mode="indeterminate" color="accent" diameter="32"></mat-progress-spinner>
   </div>
 
-  <div>
-    <label>Beschreibung</label>
-    <p *ngIf="!isEditable">
-      {{beer.description}}
-    </p>
-    <input type="text" [(ngModel)]="beer.description" *ngIf="isEditable">
+  <!-- Details -->
+  <div fxFlex.gt-md="70">
+    <div fxLayout="column" fxLayoutAlign="start stretch">
+      <div>
+        <label>Biername</label>
+        <p *ngIf="!isEditable">
+          {{beer.id}}
+        </p>
+        <input type="text" [(ngModel)]="beer.id" *ngIf="isEditable">
+      </div>
+      <div>
+        <label>Beschreibung</label>
+        <p *ngIf="!isEditable">
+          {{beer.description}}
+        </p>
+        <input type="text" [(ngModel)]="beer.description" *ngIf="isEditable">
+      </div>
+    </div>
   </div>
-
-  <button *ngIf="!beer.imageUrl && !isBusyUploading" (click)="fileUpload.click()">
-    Foto hochladen
-  </button>
-  <button *ngIf="beer.imageUrl && !isBusyUploading" (click)="beer.imageUrl = null;">Foto entfernen</button>
-
-
-  <input type="file" #fileUpload name="upname" ng2FileSelect [uploader]="uploader" (change)="handleUpload($event)"
-    style="display:none;" />
-
-
-  <img *ngIf="beer.imageUrl" [src]="beer.imageUrl">
-
-  <mat-progress-spinner *ngIf="isBusyUploading" mode="indeterminate" color="accent" diameter="32"></mat-progress-spinner>
 
 </div>
