--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/shared/result/result.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/shared/result/result.component.html
@@ -5,15 +5,18 @@
 
 
 <ng-container *ngIf="contest && contest.results">
-  <ng-container *ngIf="participentResult && userName">
-    <p>Das sind deine Ergebnisse, {{userName}}:</p>
-    <app-participent-results [results]="participentResult" [contestResults]="contest.results"></app-participent-results>
-  </ng-container>
 
   <p>Siegerliste:</p>
   <app-contest-results [results]="contestResult"></app-contest-results>
 
-  <p>Geschmackswertung:</p>
-  <app-taste-results [results]="contest.results"></app-taste-results>
+  <ng-container *ngIf="participentResult && userName && !isTeasing">
+    <p>Das sind deine Ergebnisse, {{userName}}:</p>
+    <app-participent-results [results]="participentResult" [contestResults]="contest.results"></app-participent-results>
+  </ng-container>
+
+  <ng-container *ngIf="!isTeasing">
+    <p>Geschmackswertung:</p>
+    <app-taste-results [results]="contest.results"></app-taste-results>
+  </ng-container>
 
 </ng-container>
