added page transitions

--- a/Beerkoenig/Beerkoenig.Spa/src/app/app.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/app.component.html
@@ -1,3 +1,5 @@
 <img id="beerkoenig" src="/assets/beerkoenig.png" alt="">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
-<router-outlet></router-outlet>
+<main [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''">
+    <router-outlet #o="outlet"></router-outlet>
+  </main>
