--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/welcome/welcome.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/admin/welcome/welcome.component.html
@@ -1,7 +1,9 @@
 <app-welcome-animation></app-welcome-animation>
 
-<h3>Willkommen!</h3>
+<div class="page-container">
+    <h3>Willkommen!</h3>
 
-<p>Zum Anlegen einer neuen Bierverkostung bitte den Button drücken:</p>
+    <p>Zum Anlegen einer neuen Bierverkostung bitte den Button drücken:</p>
 
-<button routerLink="/create">Anlegen</button>
+    <button routerLink="/create">Anlegen</button>
+</div>
