--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/welcome-participent/welcome-participent.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/welcome-participent/welcome-participent.component.html
@@ -1,6 +1,6 @@
 <app-progress-spinner *ngIf="isBusy"></app-progress-spinner>
 
-<div *ngIf="!isBusy && contest">
+<div *ngIf="!isBusy && contest" class="page-container">
   <h3>
     Willkommen zu {{contest.title}} von {{contest.creatorUserName}}!
   </h3>
