--- a/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/voting/voting.component.html
+++ b/Beerkoenig/Beerkoenig.Spa/src/app/pages/participent/voting/voting.component.html
@@ -1,14 +1,15 @@
 <app-progress-spinner *ngIf="isBusy"></app-progress-spinner>
 <ng-container *ngIf="contest">
-  <h3>
-    {{contest.title}}
-  </h3>
+  <div class="page-container">
+    <h3>
+      {{contest.title}}
+    </h3>
 
-  <ng-container *ngIf="state && state.currentResult">
-    <div *ngFor="let b of state.currentResult">
-      <mat-divider></mat-divider>
-      <app-beer-vote [beers]="contest.beers" [result]="b" (resultChanged)="onSave()"></app-beer-vote>
-    </div>
-  </ng-container>
-
+    <ng-container *ngIf="state && state.currentResult">
+      <div *ngFor="let b of state.currentResult">
+        <mat-divider></mat-divider>
+        <app-beer-vote [beers]="contest.beers" [result]="b" (resultChanged)="onSave()"></app-beer-vote>
+      </div>
+    </ng-container>
+  </div>
 </ng-container>
